# whillans-surf

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: 2010-01-01_15-25-30.evt  2010-01-03_16-18-30.evt  2010-01-03_23-43-30.evt  2010-01-05_00-11-30.evt  2010-01-06_15-04-15.evt  2010-01-08_17-49-45.evt  2010-01-09_09-11-45.evt  2010-01-09_17-56-45.evt  2010-01-10_10-14-30.evt  2010-01-11_20-34-45.evt  2010-01-13_14-10-45.evt  2010-01-13_23-53-15.evt  2010-01-14_15-18-30.evt  2010-01-15_15-30-00.evt  2010-01-16_03-31-45.evt  2010-01-19_15-00-00.evt  2010-01-20_14-16-45.evt  2010-01-23_08-11-45.evt  2010-01-25_09-20-00.evt  2010-01-25_19-53-30.evt  2010-01-29_13-18-30.evt  Stations.txt
data/evt/: 2010-01-01_23-58-00.evt  2010-01-02_17-15-45.evt  2010-01-04_14-56-15.evt  2010-01-05_14-29-00.evt  2010-01-06_02-06-45.evt  2010-01-07_15-29-30.evt  2010-01-08_09-34-45.evt  2010-01-10_19-12-00.evt  2010-01-11_11-34-45.evt  2010-01-12_12-48-00.evt  2010-01-12_21-53-00.evt  2010-01-16_16-40-00.evt  2010-01-17_15-21-45.evt  2010-01-18_02-26-45.evt  2010-01-18_16-31-45.evt  2010-01-21_08-36-45.evt  2010-01-21_18-55-00.evt  2010-01-22_07-56-45.evt  2010-01-22_19-03-30.evt  2010-01-23_19-05-00.evt  2010-01-24_08-43-15.evt  2010-01-24_19-21-45.evt  2010-01-26_10-20-00.evt  2010-01-26_20-14-15.evt  2010-01-27_12-05-00.evt  2010-01-28_13-05-00.evt  2010-01-28_21-36-45.evt  2010-01-29_22-23-15.evt  2010-01-30_14-21-45.evt  2010-01-30_23-06-45.evt  2010-01-31_18-01-45.evt
notebooks/: load_GNSS.ipynb  plot_stations.ipynb
src/util/: coordinate_transforms.py  util.py
